--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FirstApp</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <title>AjaxApp</title>
+
+     <!--  <%= csrf_meta_tags %> -->
+      <!--<%= csp_meta_tag %>　  -->
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
